isat_nn_code/error.txt
(intel_cantera) [jsampayan4914@gpu004 isat_nn_code]$ ./build.sh 
rm: cannot remove '*.o': No such file or directory
rm: cannot remove '*.mod': No such file or directory
rm: cannot remove '*.exe': No such file or directory
reactor.cpp:884:38: error: use of undeclared identifier 'dt'
  884 |     CVODES_INTEGRATE_WITH_SENS(odes, dt, aTol, rTol, solution_arr.data(), Jptr);
      |                                      ^
reactor.cpp:884:42: error: use of undeclared identifier 'aTol'
  884 |     CVODES_INTEGRATE_WITH_SENS(odes, dt, aTol, rTol, solution_arr.data(), Jptr);
      |                                          ^
reactor.cpp:884:48: error: use of undeclared identifier 'rTol'
  884 |     CVODES_INTEGRATE_WITH_SENS(odes, dt, aTol, rTol, solution_arr.data(), Jptr);
      |                                                ^
reactor.cpp:888:9: error: use of undeclared identifier 'mode'; did you mean 'modf'?
  888 |     if (mode == 2)
      |         ^~~~
      |         modf
/cm/local/apps/gcc/13.1.0/lib/gcc/x86_64-linux-gnu/13.1.0/../../../../include/c++/13.1.0/math.h:54:12: note: 'modf' declared here
   54 | using std::modf;
      |            ^
reactor.cpp:888:14: error: comparison between pointer and integer ('long double (*)(long double, long double *)' and 'int')
  888 |     if (mode == 2)
      |         ~~~~ ^  ~
5 errors generated.
ifx: error #10236: File not found: 'reactor.o'
(intel_cantera) [jsampayan4914@gpu004 isat_nn_code]$ 
